--- a/styles.css
+++ b/styles.css
@@ -2,21 +2,29 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
-#container > div {
-    background-color: blue;
-    height: auto;
-    aspect-ratio: 1/1; 
-    border-color: black;
-    border-style: solid;
+.title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 500px;
+    padding: 10px;
+}
+
+#container>div {
+    background-color: rgb(255, 255, 255);
+    aspect-ratio: 1/1;
     box-sizing: border-box;
+    border: 1px dotted grey
 }
 
 #container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 50%;
+    width: 60%;
     align-items: center;
+    border: 10px solid rgb(189, 189, 189);
+    border-radius: 10px;
 }
