--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    font-family: 'Helvetica';
 }
 
 .title {
@@ -10,6 +11,7 @@ body {
     font-size: 30px;
     font-weight: 500px;
     padding: 10px;
+
 }
 
 #container>div {
@@ -23,7 +25,7 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 60%;
+    width: 35%;
     align-items: center;
     border: 10px solid rgb(189, 189, 189);
     border-radius: 10px;
@@ -31,6 +33,47 @@ body {
 
 .buttons {
     display: flex;
-    margin: 1em;
+    flex-direction: column;
+    padding: 10px;
     gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+button {
+    padding: 1em;
+}
+
+.slide{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 5px solid rgb(189, 189, 189);
+    border-radius: 10px;
+    padding: 1em;
+    justify-content: center;
+    height: fit-content;
+}
+
+.active {
+    background-color: black;
+    color: white;
+}
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+    align-items: center; 
+    width: 100%; 
+    padding: 20px;
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.options {
+    display: flex;
+    gap: 2em;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
 }
